--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@minot0r/iutcalendar",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Get courses from IUT using HTTP GET using ical library on IUT's EDT WebServers",
   "main": "index.js",
   "scripts": {
     "test": "node test.js",
-    "build-docs": "jsdoc --configure .jsdoc.json --verbose && cp -r ./docs/@minot0r/iutcalendar/1.0.5/* ./docs && rm -rf ./docs/@minot0r"
+    "build-docs": "node node_modules/jsdoc/jsdoc.js --configure .jsdoc.json --verbose && cp -r ./docs/@minot0r/iutcalendar/1.0.6/* ./docs && rm -rf ./docs/@minot0r"
   },
   "keywords": [
     "iut",
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "ical": "^0.6.0",
+    "jsdoc": "^3.6.3",
     "minami": "^1.2.3"
   }
 }
